# bare-metal-rv1126

./: CMakeLists.txt  cpu.h  cru_rv1126.h  exception.S  exception.c  grf_rv1126.h  link-qemu-virt.ld  link.ld  main.c  pre_c.c  shell.nix  stack.c  stack.h  start-qemu.zsh  start.S
cmake/: toolchain-arm-none-unknown-eabihf.cmake
tools/: RV1126MINIALL.ini  RV1126_BAREMETAL.ini  mkimage
